# fotoblog-in-django

./: README.md  db.sqlite3  pyproject.toml
authentication/: forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20241024_1900.py  0003_user_follows.py
authentication/templates/authentication/: login.html
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_author_blogcontributor_blog_contributors.py
blog/templates/blog/: home.html
blog/templatetags/: blog_extras.py
core/: settings.py  urls.py
static/: app.css
templates/: base.html
